@@ -43,11 +43,13 @@
 #include <fcntl.h>
 #include <sys/stat.h>
 #include <signal.h>
+#include <math.h>
 
 #include "src/common/slurm_xlator.h"
 #include "src/common/slurm_acct_gather_energy.h"
 #include "src/common/slurm_protocol_defs.h"
 #include "src/common/fd.h"
+
 #include "src/slurmd/common/proctrack.h"
 
 #include "src/slurmd/slurmd/slurmd.h"
@@ -55,6 +57,7 @@
 /*
  * freeipmi includes for the lib
  */
+#include <freeipmi/freeipmi.h>
 
 /* These are defined here so when we link with something other than
  * the slurmctld we will have these symbols defined.  They will get
@@ -73,6 +76,13 @@ slurmd_conf_t *conf = NULL;
 
 #define IPMI_VERSION 2		/* Data structure version number */
 #define MAX_LOG_ERRORS 5	/* Max sensor reading errors log messages */
+#define XCC_MIN_RES 50        /* Minimum resolution for XCC readings, in ms */
+#define IPMI_RAW_MAX_ARGS 256 /* Max XCC response length in bytes*/
+/*FIXME: Investigate which is the OVERFLOW limit for XCC*/
+#define IPMI_XCC_OVERFLOW INFINITE /* XCC overflows at X */
+
+#define XCC_FLAG_NONE 0x00000000
+#define XCC_FLAG_FAKE 0x00000001
 
 /*
  * These variables are required by the generic plugin interface.  If they
@@ -150,8 +160,10 @@ typedef struct slurm_ipmi_conf {
 	 *   IPMI_MONITORING_DRIVER_TYPE_SUNBMC   = 0x03,
 	 *    Pass < 0 for default of IPMI_MONITORING_DRIVER_TYPE_KCS.*/
 	uint32_t driver_type;
+	uint32_t flags;
 	/* frequency for ipmi call*/
 	uint32_t freq;
+	uint32_t ipmi_flags;
 	/* BMC password. Pass NULL ptr for default password.  Standard
 	 * default is the null (e.g. empty) password.  Maximum length of 20
 	 * bytes.*/
@@ -178,6 +190,10 @@ typedef struct slurm_ipmi_conf {
 	/* Specifies the session timeout length in milliseconds.  Pass <= 0
 	 * to default 60000 (60 seconds).*/
 	uint32_t session_timeout;
+	uint8_t target_channel_number;
+	bool target_channel_number_is_set;
+	uint8_t target_slave_address;
+	bool target_slave_address_is_set;
 	/* Timeout for the ipmi thread */
 	uint32_t timeout;
 	/* BMC username. Pass NULL ptr for default username.  Standard
@@ -191,6 +207,22 @@ typedef struct slurm_ipmi_conf {
 	 * protocol.*/
 	uint32_t workaround_flags;
 } slurm_ipmi_conf_t;
+
+/* Struct to store the raw single data command reading */
+typedef struct xcc_raw_single_data {
+	uint16_t fifo_inx;
+	uint32_t j;
+	uint16_t mj;
+	uint16_t ms;
+	uint32_t s;
+} xcc_raw_single_data_t;
+
+static acct_gather_energy_t xcc_energy;
+
+/* LUN, NetFN, CMD, Data[n]*/
+static uint8_t cmd_rq[8] = { 0x00, 0x3A, 0x32, 4, 2, 0, 0, 0 };
+static unsigned int cmd_rq_len = 8;
+
 
 static int dataset_id = -1; /* id of the dataset for profile data */
 
@@ -207,6 +239,9 @@ static pthread_cond_t launch_cond = PTHREAD_COND_INITIALIZER;
 static pthread_t thread_ipmi_id_launcher = 0;
 static pthread_t thread_ipmi_id_run = 0;
 
+/* Thread scope global vars */
+__thread ipmi_ctx_t ipmi_ctx = NULL;
+
 static void _reset_slurm_ipmi_conf(slurm_ipmi_conf_t *slurm_ipmi_conf)
 {
 	if (slurm_ipmi_conf) {
@@ -217,7 +252,9 @@ static void _reset_slurm_ipmi_conf(slurm_ipmi_conf_t *slurm_ipmi_conf)
 		slurm_ipmi_conf->driver_address = 0;
 		xfree(slurm_ipmi_conf->driver_device);
 		slurm_ipmi_conf->driver_type = NO_VAL;
+		slurm_ipmi_conf->flags = XCC_FLAG_NONE;
 		slurm_ipmi_conf->freq = DEFAULT_IPMI_FREQ;
+		slurm_ipmi_conf->ipmi_flags = IPMI_FLAGS_DEFAULT;
 		xfree(slurm_ipmi_conf->password);
 		slurm_ipmi_conf->password = xstrdup(DEFAULT_IPMI_PASS);
 		slurm_ipmi_conf->privilege_level = 0;
@@ -225,6 +262,10 @@ static void _reset_slurm_ipmi_conf(slurm_ipmi_conf_t *slurm_ipmi_conf)
 		slurm_ipmi_conf->register_spacing = 0;
 		slurm_ipmi_conf->retransmission_timeout = 0;
 		slurm_ipmi_conf->session_timeout = 0;
+		slurm_ipmi_conf->target_channel_number = 0x00;
+		slurm_ipmi_conf->target_channel_number_is_set = false;
+		slurm_ipmi_conf->target_slave_address = 0x20;
+		slurm_ipmi_conf->target_slave_address_is_set = false;
 		slurm_ipmi_conf->timeout = DEFAULT_IPMI_TIMEOUT;
 		xfree(slurm_ipmi_conf->username);
 		slurm_ipmi_conf->username = xstrdup(DEFAULT_IPMI_USER);
@@ -278,15 +319,185 @@ static int _running_profile(void)
  */
 static int _init_ipmi_config (void)
 {
+	int ret = 0;
+	unsigned int workaround_flags_mask =
+		(IPMI_WORKAROUND_FLAGS_INBAND_ASSUME_IO_BASE_ADDRESS
+		 | IPMI_WORKAROUND_FLAGS_INBAND_SPIN_POLL);
+
+	if (ipmi_ctx) {
+		debug("ipmi_ctx already initialized\n");
+		return SLURM_SUCCESS;
+	}
+
+	if (!(ipmi_ctx = ipmi_ctx_create())) {
+		error("ipmi_ctx_create: %s\n", strerror(errno));
+		goto cleanup;
+	}
+
+	if (getuid() != 0) {
+		error ("%s: error : must be root to open ipmi devices\n",
+		       __func__);
+		goto cleanup;
+	}
+
+	/* XCC OEM commands always require to use in-band communication */
+	if (((slurm_ipmi_conf.driver_type > 0) &&
+	     (slurm_ipmi_conf.driver_type != NO_VAL) &&
+	     (slurm_ipmi_conf.driver_type != IPMI_DEVICE_KCS) &&
+	     (slurm_ipmi_conf.driver_type != IPMI_DEVICE_SSIF) &&
+	     (slurm_ipmi_conf.driver_type != IPMI_DEVICE_OPENIPMI) &&
+	     (slurm_ipmi_conf.driver_type != IPMI_DEVICE_SUNBMC))
+	    || (slurm_ipmi_conf.workaround_flags & ~workaround_flags_mask)) {
+		/* IPMI ERROR PARAMETERS */
+		error ("%s: error: XCC Lenovo plugin only supports in-band communication, incorrect driver type or workaround flags",
+		       __func__);
+
+		debug("slurm_ipmi_conf.driver_type=%u slurm_ipmi_conf.workaround_flags=%u",
+		      slurm_ipmi_conf.driver_type,
+		      slurm_ipmi_conf.workaround_flags);
+
+		goto cleanup;
+	}
+
+	if (slurm_ipmi_conf.driver_type == NO_VAL) {
+		if ((ret = ipmi_ctx_find_inband(
+			     ipmi_ctx,
+			     NULL,
+			     slurm_ipmi_conf.disable_auto_probe,
+			     slurm_ipmi_conf.driver_address,
+			     slurm_ipmi_conf.register_spacing,
+			     slurm_ipmi_conf.driver_device,
+			     slurm_ipmi_conf.workaround_flags,
+			     slurm_ipmi_conf.ipmi_flags)) <= 0) {
+			error("%s: error on ipmi_ctx_find_inband: %s",
+			      __func__, ipmi_ctx_errormsg(ipmi_ctx));
+
+			debug("slurm_ipmi_conf.driver_type=%u\n"
+			      "slurm_ipmi_conf.disable_auto_probe=%u\n"
+			      "slurm_ipmi_conf.driver_address=%u\n"
+			      "slurm_ipmi_conf.register_spacing=%u\n"
+			      "slurm_ipmi_conf.driver_device=%s\n"
+			      "slurm_ipmi_conf.workaround_flags=%u\n"
+			      "slurm_ipmi_conf.ipmi_flags=%u",
+			      slurm_ipmi_conf.driver_type,
+			      slurm_ipmi_conf.disable_auto_probe,
+			      slurm_ipmi_conf.driver_address,
+			      slurm_ipmi_conf.register_spacing,
+			      slurm_ipmi_conf.driver_device,
+			      slurm_ipmi_conf.workaround_flags,
+			      slurm_ipmi_conf.ipmi_flags);
+
+			goto cleanup;
+		}
+	} else {
+		if ((ipmi_ctx_open_inband(ipmi_ctx,
+					  slurm_ipmi_conf.driver_type,
+					  slurm_ipmi_conf.disable_auto_probe,
+					  slurm_ipmi_conf.driver_address,
+					  slurm_ipmi_conf.register_spacing,
+					  slurm_ipmi_conf.driver_device,
+					  slurm_ipmi_conf.workaround_flags,
+					  slurm_ipmi_conf.ipmi_flags) < 0)) {
+			error ("%s: error on ipmi_ctx_open_inband: %s",
+			       __func__, ipmi_ctx_errormsg (ipmi_ctx));
+
+			debug("slurm_ipmi_conf.driver_type=%u\n"
+			      "slurm_ipmi_conf.disable_auto_probe=%u\n"
+			      "slurm_ipmi_conf.driver_address=%u\n"
+			      "slurm_ipmi_conf.register_spacing=%u\n"
+			      "slurm_ipmi_conf.driver_device=%s\n"
+			      "slurm_ipmi_conf.workaround_flags=%u\n"
+			      "slurm_ipmi_conf.ipmi_flags=%u",
+			      slurm_ipmi_conf.driver_type,
+			      slurm_ipmi_conf.disable_auto_probe,
+			      slurm_ipmi_conf.driver_address,
+			      slurm_ipmi_conf.register_spacing,
+			      slurm_ipmi_conf.driver_device,
+			      slurm_ipmi_conf.workaround_flags,
+			      slurm_ipmi_conf.ipmi_flags);
+			goto cleanup;
+		}
+	}
+
+	if (slurm_ipmi_conf.target_channel_number_is_set
+	    || slurm_ipmi_conf.target_slave_address_is_set) {
+		if (ipmi_ctx_set_target(
+			    ipmi_ctx,
+			    slurm_ipmi_conf.target_channel_number_is_set ?
+			    &slurm_ipmi_conf.target_channel_number : NULL,
+			    slurm_ipmi_conf.target_slave_address_is_set ?
+			    &slurm_ipmi_conf.target_slave_address : NULL) < 0) {
+			error ("%s: error on ipmi_ctx_set_target: %s",
+			       __func__, ipmi_ctx_errormsg (ipmi_ctx));
+			goto cleanup;
+		}
+	}
+
 	return SLURM_SUCCESS;
+
+cleanup:
+	ipmi_ctx_close(ipmi_ctx);
+	ipmi_ctx_destroy(ipmi_ctx);
+	return SLURM_FAILURE;
 }
 
 /*
  * _read_ipmi_values read the Power sensor and update last_update_watt and times
  */
-static int _read_ipmi_values(void)
+static xcc_raw_single_data_t *_read_ipmi_values(void)
 {
-	return SLURM_SUCCESS;
+	xcc_raw_single_data_t *xcc_reading;
+	uint8_t buf_rs[IPMI_RAW_MAX_ARGS];
+	int rs_len = 0;
+
+	if (!IPMI_NET_FN_RQ_VALID(cmd_rq[1])) {
+                error("Invalid netfn value\n");
+		return NULL;
+	}
+
+        rs_len = ipmi_cmd_raw(ipmi_ctx,
+                              cmd_rq[0], // Lun (logical unit number)
+                              cmd_rq[1], // Net Function
+                              &cmd_rq[2], // Command number + request data
+                              cmd_rq_len - 2, // Length (in bytes)
+                              &buf_rs, // response buffer
+                              IPMI_RAW_MAX_ARGS // max response length
+                );
+
+        debug3("ipmi_cmd_raw: %s", ipmi_ctx_errormsg(ipmi_ctx));
+
+        if (rs_len < 0) {
+		error("Invalid ipmi response length");
+		return NULL;
+	}
+
+	/* Due to memory alineation we must copy the data from the buffer */
+	xcc_reading = xmalloc(sizeof(xcc_raw_single_data_t));
+	if (slurm_ipmi_conf.flags & XCC_FLAG_FAKE) {
+		static uint32_t fake_past_read = 10774496;
+		static bool fake_inited = false;
+
+		if (!fake_inited) {
+			srand((unsigned) time(NULL));
+			fake_inited = true;
+		}
+
+		xcc_reading->fifo_inx = 0;
+		// Fake metric j
+		xcc_reading->j = fake_past_read + 550 + rand() % 200;
+		fake_past_read = xcc_reading->j;
+		xcc_reading->mj = 0;
+		xcc_reading->s = time(NULL) - 15; //Fake metric timestamp
+		xcc_reading->ms = 0;
+	} else {
+		memcpy(&xcc_reading->fifo_inx, buf_rs+2, 2);
+		memcpy(&xcc_reading->j, buf_rs+4, 4);
+		memcpy(&xcc_reading->mj, buf_rs+8, 2);
+		memcpy(&xcc_reading->s, buf_rs+10, 4);
+		memcpy(&xcc_reading->ms, buf_rs+14, 2);
+	}
+
+	return xcc_reading;
 }
 
 /*
@@ -295,11 +506,81 @@ static int _read_ipmi_values(void)
  */
 static int _thread_update_node_energy(void)
 {
-	int rc = SLURM_SUCCESS;
+	xcc_raw_single_data_t *xcc_raw;
+	static uint16_t overflows = 0; /* Number of overflows of the counter */
+        int elapsed = 0;
+	static uint64_t first_consumed_energy = 0;
 
-	rc = _read_ipmi_values();
+	xcc_raw = _read_ipmi_values();
 
-	return rc;
+	if (!xcc_raw) {
+		error("%s could not read XCC ipmi values", __func__);
+		return SLURM_ERROR;
+	}
+
+	if (!xcc_energy.poll_time) {
+		/*
+		 * First number from the slurmd.  We will figure out the usage
+		 * by subtracting this each time.
+		 */
+		first_consumed_energy =	xcc_raw->j;
+		xcc_energy.consumed_energy = 0;
+		xcc_energy.base_consumed_energy = 0;
+		xcc_energy.previous_consumed_energy = 0;
+	} else {
+		/* Detect an overflow */
+		int64_t offset = xcc_raw->j + (IPMI_XCC_OVERFLOW * overflows) -
+			xcc_energy.previous_consumed_energy;
+
+		xcc_energy.previous_consumed_energy =
+			xcc_energy.consumed_energy;
+
+		if (offset < 0) {
+			overflows++;
+			xcc_energy.consumed_energy =
+				xcc_energy.previous_consumed_energy +
+				((IPMI_XCC_OVERFLOW * overflows) -
+				 xcc_energy.previous_consumed_energy) +
+				xcc_raw->j;
+		} else
+			xcc_energy.consumed_energy = xcc_raw->j;
+
+		xcc_energy.consumed_energy -= first_consumed_energy;
+		xcc_energy.base_consumed_energy =
+			xcc_energy.consumed_energy -
+			xcc_energy.previous_consumed_energy;
+
+		elapsed = xcc_raw->s - xcc_energy.poll_time;
+	}
+
+	xcc_energy.poll_time = xcc_raw->s;
+
+	xfree(xcc_raw);
+
+	xcc_energy.base_consumed_energy = xcc_energy.consumed_energy -
+		xcc_energy.previous_consumed_energy;
+
+	if (elapsed && xcc_energy.base_consumed_energy)
+		xcc_energy.current_watts =
+			round((double)xcc_energy.base_consumed_energy /
+			      (double)elapsed);
+
+	/*
+	 * FIXME: base_watts is only used in sview?
+	 * to print out Lowest Joules?  That seems confusing.  We should remove
+	 * it in the future.
+	 */
+
+	if (debug_flags & DEBUG_FLAG_ENERGY) {
+		info("%s: XCC current_watts: %u consumed energy last interval: %"PRIu64"(current reading %"PRIu64") Joules, elapsed time: %u Seconds, first read energy counter val: %"PRIu64,
+		     __func__,
+		     xcc_energy.current_watts,
+		     xcc_energy.base_consumed_energy,
+		     xcc_energy.consumed_energy,
+		     elapsed,
+		     first_consumed_energy);
+	}
+	return SLURM_SUCCESS;
 }
 
 /*
@@ -342,13 +623,57 @@ cleanup:
 
 static int _ipmi_send_profile(void)
 {
-	uint64_t data[5];
+	/*
+	 * This enum is directly related to the xcc_labels below.  If this is
+	 * changed it should be altered as well.
+	 */
+	enum {
+		XCC_ENERGY = 0,
+		XCC_CURR_POWER,
+		XCC_LABEL_CNT
+	};
+
+	static char *xcc_labels[] = { "Energy",
+				      "CurrPower",
+				      NULL };
+
+	uint16_t i;
+	uint64_t data[XCC_LABEL_CNT];
 
 	if (!_running_profile())
 		return SLURM_SUCCESS;
 
-	return acct_gather_profile_g_add_sample_data(dataset_id, (void *)data,
-						     0);
+	if (dataset_id < 0) {
+		acct_gather_profile_dataset_t dataset[XCC_LABEL_CNT + 1];
+		for (i = 0; i < XCC_LABEL_CNT; i++) {
+			dataset[i].name = xcc_labels[i];
+			dataset[i].type = PROFILE_FIELD_UINT64;
+		}
+		dataset[i].name = NULL;
+		dataset[i].type = PROFILE_FIELD_NOT_SET;
+
+		dataset_id = acct_gather_profile_g_create_dataset(
+			"Energy", NO_PARENT, dataset);
+
+		if (debug_flags & DEBUG_FLAG_ENERGY)
+			debug("Energy: dataset created (id = %d)", dataset_id);
+		if (dataset_id == SLURM_ERROR) {
+			error("Energy: Failed to create the dataset for IPMI");
+			return SLURM_ERROR;
+		}
+	}
+
+	/* pack an array of uint64_t with current power of sensors */
+	memset(data, 0, sizeof(data));
+	data[XCC_ENERGY] = xcc_energy.base_consumed_energy;
+	data[XCC_CURR_POWER] = xcc_energy.current_watts;
+	if (debug_flags & DEBUG_FLAG_PROFILE)
+		for (i = 0; i < XCC_LABEL_CNT; i++)
+			info("PROFILE-Energy: %s=%"PRIu64,
+			     xcc_labels[i], data[i]);
+
+	return acct_gather_profile_g_add_sample_data(
+		dataset_id, (void *)data, xcc_energy.poll_time);
 }
 
 
@@ -451,20 +776,61 @@ static void *_thread_launcher(void *no_data)
 
 static int _get_joules_task(uint16_t delta)
 {
-	acct_gather_energy_t *energies = NULL;
+	acct_gather_energy_t *new = NULL;
 	uint16_t sensor_cnt = 0;
+	static bool first = true;
+	static uint64_t first_consumed_energy = 0;
 
-	if (slurm_get_node_energy(NULL, delta, &sensor_cnt, &energies)) {
-		error("_get_joules_task: can't get info from slurmd");
+        /*
+	 * 'delta' parameter means "use cache" if data is newer than delta
+	 * seconds ago, otherwise just inquiry ipmi again.
+	 */
+	if (slurm_get_node_energy(NULL, delta, &sensor_cnt, &new)) {
+		error("%s: can't get info from slurmd", __func__);
 		return SLURM_ERROR;
 	}
-	acct_gather_energy_destroy(energies);
+
+	if (sensor_cnt != 1) {
+		error("%s: received %u xcc sensors expected 1",
+		      __func__, sensor_cnt);
+		acct_gather_energy_destroy(new);
+		return SLURM_ERROR;
+	}
+
+	if (first) {
+		if (!new->consumed_energy) {
+			info("we got a blank");
+			goto end_it;
+		}
+
+		/*
+		 * First number from the slurmd.  We will figure out the usage
+		 * by subtracting this each time.
+		 */
+		first_consumed_energy = new->consumed_energy;
+		first = false;
+	}
+
+	new->consumed_energy -= first_consumed_energy;
+	new->previous_consumed_energy = xcc_energy.consumed_energy;
+	new->base_consumed_energy =
+		new->consumed_energy - new->previous_consumed_energy;
+
+	memcpy(&xcc_energy, new, sizeof(acct_gather_energy_t));
+
+	if (debug_flags & DEBUG_FLAG_ENERGY)
+		info("%s: consumed %"PRIu64" Joules "
+		     "(received %"PRIu64"(%u watts) from slurmd)",
+		     __func__,
+		     xcc_energy.consumed_energy,
+		     xcc_energy.base_consumed_energy,
+		     xcc_energy.current_watts);
+
+//	new->previous_consumed_energy = xcc_energy.consumed_energy;
+end_it:
+	acct_gather_energy_destroy(new);
 
 	return SLURM_SUCCESS;
-}
-
-static void _get_node_energy(acct_gather_energy_t *energy)
-{
 }
 
 /*
@@ -474,6 +840,8 @@ static void _get_node_energy(acct_gather_energy_t *energy)
 extern int init(void)
 {
 	debug_flags = slurm_get_debug_flags();
+
+	memset(&xcc_energy, 0, sizeof(acct_gather_energy_t));
 
 	return SLURM_SUCCESS;
 }
@@ -496,6 +864,8 @@ extern int fini(void)
 
 	slurm_mutex_lock(&ipmi_mutex);
 
+	if (ipmi_ctx)
+		ipmi_ctx_destroy(ipmi_ctx);
 	_reset_slurm_ipmi_conf(&slurm_ipmi_conf);
 
 	slurm_mutex_unlock(&ipmi_mutex);
@@ -526,34 +896,6 @@ extern int acct_gather_energy_p_get_data(enum acct_energy_type data_type,
 
 	switch (data_type) {
 	case ENERGY_DATA_NODE_ENERGY_UP:
-		slurm_mutex_lock(&ipmi_mutex);
-		if (_is_thread_launcher()) {
-			if (_thread_init() == SLURM_SUCCESS)
-				_thread_update_node_energy();
-		} else {
-			_get_joules_task(10);
-		}
-		_get_node_energy(energy);
-		slurm_mutex_unlock(&ipmi_mutex);
-		break;
-	case ENERGY_DATA_NODE_ENERGY:
-		slurm_mutex_lock(&ipmi_mutex);
-		_get_node_energy(energy);
-		slurm_mutex_unlock(&ipmi_mutex);
-		break;
-	case ENERGY_DATA_LAST_POLL:
-		slurm_mutex_lock(&ipmi_mutex);
-		*last_poll = last_update_time;
-		slurm_mutex_unlock(&ipmi_mutex);
-		break;
-	case ENERGY_DATA_SENSOR_CNT:
-		*sensor_cnt = 1;
-		break;
-	case ENERGY_DATA_STRUCT:
-		slurm_mutex_lock(&ipmi_mutex);
-		_get_node_energy(energy);
-		slurm_mutex_unlock(&ipmi_mutex);
-		break;
 	case ENERGY_DATA_JOULES_TASK:
 		slurm_mutex_lock(&ipmi_mutex);
 		if (_is_thread_launcher()) {
@@ -562,8 +904,22 @@ extern int acct_gather_energy_p_get_data(enum acct_energy_type data_type,
 		} else {
 			_get_joules_task(10);
 		}
-		_get_node_energy(energy);
+		memcpy(energy, &xcc_energy, sizeof(acct_gather_energy_t));
 		slurm_mutex_unlock(&ipmi_mutex);
+		break;
+	case ENERGY_DATA_NODE_ENERGY:
+	case ENERGY_DATA_STRUCT:
+		slurm_mutex_lock(&ipmi_mutex);
+		memcpy(energy, &xcc_energy, sizeof(acct_gather_energy_t));
+		slurm_mutex_unlock(&ipmi_mutex);
+		break;
+	case ENERGY_DATA_LAST_POLL:
+		slurm_mutex_lock(&ipmi_mutex);
+		*last_poll = xcc_energy.poll_time;
+		slurm_mutex_unlock(&ipmi_mutex);
+		break;
+	case ENERGY_DATA_SENSOR_CNT:
+		*sensor_cnt = 1;
 		break;
 	default:
 		error("acct_gather_energy_p_get_data: unknown enum %d",
@@ -623,6 +979,7 @@ extern void acct_gather_energy_p_conf_options(s_p_options_t **full_options,
 		{"EnergyIPMITimeout", S_P_UINT32},
 		{"EnergyIPMIUsername", S_P_STRING},
 		{"EnergyIPMIWorkaroundFlags", S_P_UINT32},
+		{"EnergyXCCFake", S_P_BOOLEAN},
 		{NULL} };
 
 	transfer_s_p_options(full_options, options, full_options_cnt);
@@ -630,6 +987,8 @@ extern void acct_gather_energy_p_conf_options(s_p_options_t **full_options,
 
 extern void acct_gather_energy_p_conf_set(s_p_hashtbl_t *tbl)
 {
+	bool tmp_bool;
+
 	/* Set initial values */
 	_reset_slurm_ipmi_conf(&slurm_ipmi_conf);
 
@@ -647,6 +1006,8 @@ extern void acct_gather_energy_p_conf_set(s_p_hashtbl_t *tbl)
 			       "EnergyIPMIDriverAddress", tbl);
 		s_p_get_string(&slurm_ipmi_conf.driver_device,
 			       "EnergyIPMIDriverDevice", tbl);
+		s_p_get_uint32(&slurm_ipmi_conf.driver_type,
+			       "EnergyIPMIDriverType", tbl);
 		s_p_get_uint32(&slurm_ipmi_conf.driver_type,
 			       "EnergyIPMIDriverType", tbl);
 		s_p_get_uint32(&slurm_ipmi_conf.freq,
@@ -671,6 +1032,19 @@ extern void acct_gather_energy_p_conf_set(s_p_hashtbl_t *tbl)
 			       "EnergyIPMIUsername", tbl);
 		s_p_get_uint32(&slurm_ipmi_conf.workaround_flags,
 			       "EnergyIPMIWorkaroundFlags", tbl);
+		s_p_get_boolean(&tmp_bool, "EnergyXCCFake", tbl);
+		if (tmp_bool) {
+			slurm_ipmi_conf.flags |= XCC_FLAG_FAKE;
+			/*
+			 * This is just to do a random query and get error if
+			 * ipmi is not initialized
+			 */
+			cmd_rq[0] = 0x00;
+			cmd_rq[1] = 0x04;
+			cmd_rq[2] = 0x2d;
+			cmd_rq[3] = 0x36;
+			cmd_rq_len = 4;
+		}
 	}
 
 	if (!_run_in_daemon())
